# gradient-rs

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
.github/workflows/: ci.yml  release.yml  rust.yml
completions/: gradient.fish
data/: invalid.ggr
src/: cli.rs  main.rs  svg_gradient.rs  util.rs
tests/: app.rs
