[package]
name = "gradient"
version = "0.4.1"
authors = ["Nor Khasyatillah <mazznoer@ymail.com>"]
edition = "2018"
description = "A command line tool for playing with color gradients"
keywords = ["color", "gradient", "colormap", "color-scheme", "gimp"]
categories = ["command-line-utilities", "graphics"]
readme = "README.md"
repository = "https://github.com/mazznoer/gradient-rs"
license = "MIT OR Apache-2.0"
exclude = [
	".github/*",
	"docs/*",
	"test_data/*",
	"tests/*",
]

[profile.release]
lto = true
strip = true

[dependencies]
clap = { version = "4.5", features = ["derive", "wrap_help"] }
colorgrad = { version = "0.7", features = ["lab", "ggr"] }
csscolorparser = { version = "0.7" }
svg = { version = "0.18" }
terminal_size = { version = "0.4" }

[build-dependencies]
clap = { version = "4.5" }
clap_complete = { version = "4.5" }
colorgrad = { version = "0.7" }

[dev-dependencies]
assert_cmd = { version = "2.0" }
