[package]
name = "gradient"
version = "0.5.0"
authors = ["Nor Khasyatillah <mazznoer@ymail.com>"]
edition = "2024"
description = "A command line tool for playing with color gradients"
keywords = ["color", "gradient", "colormap", "color-scheme", "gimp"]
categories = ["command-line-utilities", "graphics"]
readme = "README.md"
repository = "https://github.com/mazznoer/gradient-rs"
license = "MIT OR Apache-2.0"
exclude = [
	".github/*",
	"docs/*",
	"test_data/*",
	"tests/*",
]

[profile.release]
lto = true
strip = true

[dependencies]
colorgrad = { version = "0.8", features = ["preset", "named-colors", "lab", "ggr"] }
csscolorparser = { version = "0.8" }
lexopt = { version = "0.3" }
svg = { version = "0.18" }
terminal_size = { version = "0.4" }

[dev-dependencies]
assert_cmd = { version = "2.0" }
